Add route remove matrix
