# Serveur/python-flask-server/swagger_server/swagger/swagger.yaml
@@ -86,6 +86,23 @@ paths:
         400:
           description: "bad input parameter"
       x-swagger-router-controller: "swagger_server.controllers.get_data_controller"
+  /resetMatrix:
+    post:
+      tags:
+      - "Manage Training"
+      summary: "Reset all confusion matrix"
+      description: "Reset all confusion matrix\n"
+      operationId: "reset_matrix"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "Matrix are reset"
+        400:
+          description: "bad input parameter"
+      x-swagger-router-controller: "swagger_server.controllers.manage_training_controller"
+      
   /startTrain:
     post:
       tags:
